# text_parser

./: pyproject.toml  requirements.txt
test/: lldp.txt  test_parsing.py
text_parsing/: file_parser.py
text_parsing/templates/: lldp.tpl
