[tool.poetry]
name = "text-parsing"
version = "0.1.0"
description = ""
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
readme = "README.md"
packages = [{include = "text_parsing"}]

[tool.poetry.dependencies]
python = "^3.11"
textfsm = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
